# missions

./: Dockerfile  debug_models.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
bot/: main.py
core/: config.py  database.py  exceptions.py  middleware.py  scheduler.py
data/: mission_groups.json  missions.json
handlers/: __init__.py  admin_analytics.py  admin_missions.py  mission.py  mission_groups.py  mission_groups_user.py  notification.py  pair.py  start.py  theme_week.py
handlers/admin/: ___init___.py  __init__.py  admin_archive.py  users.py
keyboards/: admin_kb.py  admin_missions_kb.py  group_kb.py  mission_kb.py  notification_kb.py  pair_kb.py  theme_week_kb.py
migrations/: add_group_columns.py
models/: __init__.py  analytics.py  base.py  completion.py  mission.py  mission_group.py  notification.py  pair.py  pair_mission.py  theme_week.py  user.py  user_group_access.py  user_group_progress.py
scripts/: init_db.py  load_groups_from_json.py  manual seed.txt  manual_seed.sh  seed_missions.py  seed_missions_v2.py
services/: analytics_service.py  base.py  completion_service.py  mission_group_service.py  mission_service.py  notification_service.py  pair_service.py  theme_week_service.py  user_progress_service.py  user_service.py
utils/: mission_validation.py
